--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,34 @@ body{
 }
 
 #container{
-
     border: 1px red solid;
+    height: 500px;
+    width: 80%; 
+    margin: 0 auto;
+}
 
+#blocCitation{
+    /* border: green 1px solid;
+    height: 400px;
+    width: auto; */
 }
 
 #citation{
-    border: 1px red solid;
-
+    /* border: blue 1px solid;
+    height: 300px;
+    width: auto; */
 }
 
 #auteur{
-    border: 1px red solid;
-
+    /* border: purple 1px solid;
+    height: 200px;
+    width: auto; */
 }
 
+#btn{
+    border: black 1px solid;
+    height: 30px;
+    width: 300px;
+    text-align: center;
+    padding: 35px;
+}
