--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,54 @@
 body{
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    width: 100%;
+    height: 100%;
+    background-color: #C9ADA7;
     
 }
 
+/* Section qui contient la citation, l'auteur et le bouton de génération */
 #container{
-    border: 1px red solid;
-    height: 500px;
-    width: 80%; 
-    margin: 0 auto;
+    width: 70%; 
+    margin: auto;
+    background-color: #F2E9E4;
+    border-radius: 10px;
+    font-family: 'Edu NSW ACT Foundation', cursive;
+    box-shadow: 5px 11px 8px -5px #000000;
+    padding: 10px;
+    margin-top: 70%;
 }
 
+/* Bloc qui contient l'affichage de la citation et de l'auteur */
 #blocCitation{
-    /* border: green 1px solid;
-    height: 400px;
-    width: auto; */
+    font-size: 1.3rem;
 }
 
+/* Bloc qui contient l'affichage de la citation */
 #citation{
-    /* border: blue 1px solid;
-    height: 300px;
-    width: auto; */
+    margin-bottom: 5px;
+    text-align: center;
 }
 
+/* Bloc qui contient l'affichage de l'auteur */
 #auteur{
-    /* border: purple 1px solid;
-    height: 200px;
-    width: auto; */
+    border-top: 0.5px dotted black;
+    text-align: center;
+    padding-top: 5px;
 }
 
+/* Bouton qui genere une nouvelle citation */
 #btn{
     border: black 1px solid;
-    height: 30px;
-    width: 300px;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 50%;
     text-align: center;
-    padding: 35px;
+    border-radius: 15px;
+    margin: auto;
+    margin-top: 10px;
+    padding: 5px;
+    box-shadow: 5px 5px 11px -10px #000000;
+    background-color: #A99EA7;
+}
+
+#btn:hover{
+    box-shadow: inset 5px 5px 11px -10px #000000;
 }
